Server refactoring and deployment

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Local css file path">
-    <script type="text/javascript" src="Local JS file path"></script>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="https://odysee.com/public/favicon_128.png" />
     <title>Odysee Livestream Viewer Count</title>
 </head>
 <body>
     <button class="live-button">LIVE</button>
     <button id="viewer-count" class="viewer-count"></button>
 </body>
+<script type="module" src="/script.js"></script>
 </html>
